// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGroupAttributes Return basic attributes from array 1`] = `
Object {
  "border-radius-bottom-left-general": 10,
  "border-radius-bottom-left-l": undefined,
  "border-radius-bottom-left-m": undefined,
  "border-radius-bottom-left-s": undefined,
  "border-radius-bottom-left-xl": undefined,
  "border-radius-bottom-left-xs": undefined,
  "border-radius-bottom-left-xxl": undefined,
  "border-radius-bottom-right-general": 10,
  "border-radius-bottom-right-l": undefined,
  "border-radius-bottom-right-m": undefined,
  "border-radius-bottom-right-s": undefined,
  "border-radius-bottom-right-xl": undefined,
  "border-radius-bottom-right-xs": undefined,
  "border-radius-bottom-right-xxl": undefined,
  "border-width-bottom-general": 2,
  "border-width-bottom-l": undefined,
  "border-width-bottom-m": undefined,
  "border-width-bottom-s": undefined,
  "border-width-bottom-xl": undefined,
  "border-width-bottom-xs": undefined,
  "border-width-bottom-xxl": undefined,
  "border-color-general": undefined,
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-width-left-general": 2,
  "border-width-left-l": undefined,
  "border-width-left-m": undefined,
  "border-width-left-s": undefined,
  "border-width-left-xl": undefined,
  "border-width-left-xs": undefined,
  "border-width-left-xxl": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-status-general": true,
  "border-palette-status-l": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xxl": undefined,
  "border-width-right-general": 2,
  "border-width-right-l": undefined,
  "border-width-right-m": undefined,
  "border-width-right-s": undefined,
  "border-width-right-xl": undefined,
  "border-width-right-xs": undefined,
  "border-width-right-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
  "border-radius-sync-general": true,
  "border-radius-sync-l": undefined,
  "border-radius-sync-m": undefined,
  "border-radius-sync-s": undefined,
  "border-radius-sync-xl": undefined,
  "border-radius-sync-xs": undefined,
  "border-radius-sync-xxl": undefined,
  "border-width-sync-general": true,
  "border-width-sync-l": undefined,
  "border-width-sync-m": undefined,
  "border-width-sync-s": undefined,
  "border-width-sync-xl": undefined,
  "border-width-sync-xs": undefined,
  "border-width-sync-xxl": undefined,
  "border-radius-top-left-general": 10,
  "border-radius-top-left-l": undefined,
  "border-radius-top-left-m": undefined,
  "border-radius-top-left-s": undefined,
  "border-radius-top-left-xl": undefined,
  "border-radius-top-left-xs": undefined,
  "border-radius-top-left-xxl": undefined,
  "border-radius-top-right-general": 10,
  "border-radius-top-right-l": undefined,
  "border-radius-top-right-m": undefined,
  "border-radius-top-right-s": undefined,
  "border-radius-top-right-xl": undefined,
  "border-radius-top-right-xs": undefined,
  "border-radius-top-right-xxl": undefined,
  "border-width-top-general": 2,
  "border-width-top-l": undefined,
  "border-width-top-m": undefined,
  "border-width-top-s": undefined,
  "border-width-top-xl": undefined,
  "border-width-top-xs": undefined,
  "border-width-top-xxl": undefined,
  "border-radius-unit-general": "px",
  "border-radius-unit-l": undefined,
  "border-radius-unit-m": undefined,
  "border-radius-unit-s": undefined,
  "border-radius-unit-xl": undefined,
  "border-radius-unit-xs": undefined,
  "border-radius-unit-xxl": undefined,
  "border-width-unit-general": "px",
  "border-width-unit-l": undefined,
  "border-width-unit-m": undefined,
  "border-width-unit-s": undefined,
  "border-width-unit-xl": undefined,
  "border-width-unit-xs": undefined,
  "border-width-unit-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from array with hover 1`] = `
Object {
  "border-radius-bottom-left-general": 10,
  "border-radius-bottom-left-general-hover": 100,
  "border-radius-bottom-left-l": undefined,
  "border-radius-bottom-left-l-hover": undefined,
  "border-radius-bottom-left-m": undefined,
  "border-radius-bottom-left-m-hover": undefined,
  "border-radius-bottom-left-s": undefined,
  "border-radius-bottom-left-s-hover": undefined,
  "border-radius-bottom-left-xl": undefined,
  "border-radius-bottom-left-xl-hover": undefined,
  "border-radius-bottom-left-xs": undefined,
  "border-radius-bottom-left-xs-hover": undefined,
  "border-radius-bottom-left-xxl": undefined,
  "border-radius-bottom-left-xxl-hover": undefined,
  "border-radius-bottom-right-general": 10,
  "border-radius-bottom-right-general-hover": 100,
  "border-radius-bottom-right-l": undefined,
  "border-radius-bottom-right-l-hover": undefined,
  "border-radius-bottom-right-m": undefined,
  "border-radius-bottom-right-m-hover": undefined,
  "border-radius-bottom-right-s": undefined,
  "border-radius-bottom-right-s-hover": undefined,
  "border-radius-bottom-right-xl": undefined,
  "border-radius-bottom-right-xl-hover": undefined,
  "border-radius-bottom-right-xs": undefined,
  "border-radius-bottom-right-xs-hover": undefined,
  "border-radius-bottom-right-xxl": undefined,
  "border-radius-bottom-right-xxl-hover": undefined,
  "border-width-bottom-general": 2,
  "border-width-bottom-general-hover": 20,
  "border-width-bottom-l": undefined,
  "border-width-bottom-l-hover": undefined,
  "border-width-bottom-m": undefined,
  "border-width-bottom-m-hover": undefined,
  "border-width-bottom-s": undefined,
  "border-width-bottom-s-hover": undefined,
  "border-width-bottom-xl": undefined,
  "border-width-bottom-xl-hover": undefined,
  "border-width-bottom-xs": undefined,
  "border-width-bottom-xs-hover": undefined,
  "border-width-bottom-xxl": undefined,
  "border-width-bottom-xxl-hover": undefined,
  "border-color-general": undefined,
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-width-left-general": 2,
  "border-width-left-general-hover": 20,
  "border-width-left-l": undefined,
  "border-width-left-l-hover": undefined,
  "border-width-left-m": undefined,
  "border-width-left-m-hover": undefined,
  "border-width-left-s": undefined,
  "border-width-left-s-hover": undefined,
  "border-width-left-xl": undefined,
  "border-width-left-xl-hover": undefined,
  "border-width-left-xs": undefined,
  "border-width-left-xs-hover": undefined,
  "border-width-left-xxl": undefined,
  "border-width-left-xxl-hover": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 40,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-palette-status-general": true,
  "border-palette-status-general-hover": true,
  "border-palette-status-l": undefined,
  "border-palette-status-l-hover": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-m-hover": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-s-hover": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xl-hover": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xs-hover": undefined,
  "border-palette-status-xxl": undefined,
  "border-palette-status-xxl-hover": undefined,
  "border-width-right-general": 2,
  "border-width-right-general-hover": 20,
  "border-width-right-l": undefined,
  "border-width-right-l-hover": undefined,
  "border-width-right-m": undefined,
  "border-width-right-m-hover": undefined,
  "border-width-right-s": undefined,
  "border-width-right-s-hover": undefined,
  "border-width-right-xl": undefined,
  "border-width-right-xl-hover": undefined,
  "border-width-right-xs": undefined,
  "border-width-right-xs-hover": undefined,
  "border-width-right-xxl": undefined,
  "border-width-right-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
  "border-radius-sync-general": true,
  "border-radius-sync-general-hover": true,
  "border-radius-sync-l": undefined,
  "border-radius-sync-l-hover": undefined,
  "border-radius-sync-m": undefined,
  "border-radius-sync-m-hover": undefined,
  "border-radius-sync-s": undefined,
  "border-radius-sync-s-hover": undefined,
  "border-radius-sync-xl": undefined,
  "border-radius-sync-xl-hover": undefined,
  "border-radius-sync-xs": undefined,
  "border-radius-sync-xs-hover": undefined,
  "border-radius-sync-xxl": undefined,
  "border-radius-sync-xxl-hover": undefined,
  "border-width-sync-general": true,
  "border-width-sync-general-hover": true,
  "border-width-sync-l": undefined,
  "border-width-sync-l-hover": undefined,
  "border-width-sync-m": undefined,
  "border-width-sync-m-hover": undefined,
  "border-width-sync-s": undefined,
  "border-width-sync-s-hover": undefined,
  "border-width-sync-xl": undefined,
  "border-width-sync-xl-hover": undefined,
  "border-width-sync-xs": undefined,
  "border-width-sync-xs-hover": undefined,
  "border-width-sync-xxl": undefined,
  "border-width-sync-xxl-hover": undefined,
  "border-radius-top-left-general": 10,
  "border-radius-top-left-general-hover": 100,
  "border-radius-top-left-l": undefined,
  "border-radius-top-left-l-hover": undefined,
  "border-radius-top-left-m": undefined,
  "border-radius-top-left-m-hover": undefined,
  "border-radius-top-left-s": undefined,
  "border-radius-top-left-s-hover": undefined,
  "border-radius-top-left-xl": undefined,
  "border-radius-top-left-xl-hover": undefined,
  "border-radius-top-left-xs": undefined,
  "border-radius-top-left-xs-hover": undefined,
  "border-radius-top-left-xxl": undefined,
  "border-radius-top-left-xxl-hover": undefined,
  "border-radius-top-right-general": 10,
  "border-radius-top-right-general-hover": 100,
  "border-radius-top-right-l": undefined,
  "border-radius-top-right-l-hover": undefined,
  "border-radius-top-right-m": undefined,
  "border-radius-top-right-m-hover": undefined,
  "border-radius-top-right-s": undefined,
  "border-radius-top-right-s-hover": undefined,
  "border-radius-top-right-xl": undefined,
  "border-radius-top-right-xl-hover": undefined,
  "border-radius-top-right-xs": undefined,
  "border-radius-top-right-xs-hover": undefined,
  "border-radius-top-right-xxl": undefined,
  "border-radius-top-right-xxl-hover": undefined,
  "border-width-top-general": 2,
  "border-width-top-general-hover": 20,
  "border-width-top-l": undefined,
  "border-width-top-l-hover": undefined,
  "border-width-top-m": undefined,
  "border-width-top-m-hover": undefined,
  "border-width-top-s": undefined,
  "border-width-top-s-hover": undefined,
  "border-width-top-xl": undefined,
  "border-width-top-xl-hover": undefined,
  "border-width-top-xs": undefined,
  "border-width-top-xs-hover": undefined,
  "border-width-top-xxl": undefined,
  "border-width-top-xxl-hover": undefined,
  "border-radius-unit-general": "px",
  "border-radius-unit-general-hover": "px",
  "border-radius-unit-l": undefined,
  "border-radius-unit-l-hover": undefined,
  "border-radius-unit-m": undefined,
  "border-radius-unit-m-hover": undefined,
  "border-radius-unit-s": undefined,
  "border-radius-unit-s-hover": undefined,
  "border-radius-unit-xl": undefined,
  "border-radius-unit-xl-hover": undefined,
  "border-radius-unit-xs": undefined,
  "border-radius-unit-xs-hover": undefined,
  "border-radius-unit-xxl": undefined,
  "border-radius-unit-xxl-hover": undefined,
  "border-width-unit-general": "px",
  "border-width-unit-general-hover": "px",
  "border-width-unit-l": undefined,
  "border-width-unit-l-hover": undefined,
  "border-width-unit-m": undefined,
  "border-width-unit-m-hover": undefined,
  "border-width-unit-s": undefined,
  "border-width-unit-s-hover": undefined,
  "border-width-unit-xl": undefined,
  "border-width-unit-xl-hover": undefined,
  "border-width-unit-xs": undefined,
  "border-width-unit-xs-hover": undefined,
  "border-width-unit-xxl": undefined,
  "border-width-unit-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string 1`] = `
Object {
  "border-color-general": undefined,
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-status-general": true,
  "border-palette-status-l": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with hover 1`] = `
Object {
  "border-color-general": undefined,
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 40,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-palette-status-general": true,
  "border-palette-status-general-hover": true,
  "border-palette-status-l": undefined,
  "border-palette-status-l-hover": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-m-hover": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-s-hover": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xl-hover": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xs-hover": undefined,
  "border-palette-status-xxl": undefined,
  "border-palette-status-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with prefix 1`] = `
Object {
  "icon-border-color-general": undefined,
  "icon-border-color-l": undefined,
  "icon-border-color-m": undefined,
  "icon-border-color-s": undefined,
  "icon-border-color-xl": undefined,
  "icon-border-color-xs": undefined,
  "icon-border-color-xxl": undefined,
  "icon-border-palette-color-general": 4,
  "icon-border-palette-color-l": undefined,
  "icon-border-palette-color-m": undefined,
  "icon-border-palette-color-s": undefined,
  "icon-border-palette-color-xl": undefined,
  "icon-border-palette-color-xs": undefined,
  "icon-border-palette-color-xxl": undefined,
  "icon-border-palette-opacity-general": undefined,
  "icon-border-palette-opacity-l": undefined,
  "icon-border-palette-opacity-m": undefined,
  "icon-border-palette-opacity-s": undefined,
  "icon-border-palette-opacity-xl": undefined,
  "icon-border-palette-opacity-xs": undefined,
  "icon-border-palette-opacity-xxl": undefined,
  "icon-border-palette-status-general": true,
  "icon-border-palette-status-l": undefined,
  "icon-border-palette-status-m": undefined,
  "icon-border-palette-status-s": undefined,
  "icon-border-palette-status-xl": undefined,
  "icon-border-palette-status-xs": undefined,
  "icon-border-palette-status-xxl": undefined,
  "icon-border-style-general": "solid",
  "icon-border-style-l": undefined,
  "icon-border-style-m": undefined,
  "icon-border-style-s": undefined,
  "icon-border-style-xl": undefined,
  "icon-border-style-xs": undefined,
  "icon-border-style-xxl": undefined,
}
`;
